@@ -291,12 +291,7 @@ struct mosquitto {
 	int shared_sub_count;
 	int pollfd_index;
 #  ifdef WITH_WEBSOCKETS
-#    if defined(LWS_LIBRARY_VERSION_NUMBER)
 	struct lws *wsi;
-#    else
-	struct libwebsocket_context *ws_context;
-	struct libwebsocket *wsi;
-#    endif
 #  endif
 	bool ws_want_write;
 	bool assigned_id;
